--- a/MyApplication2/app/build.gradle
+++ b/MyApplication2/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'io.reactivex:rxjava:1.2.6'
 }
