--- a/MyApplication2/app/build.gradle
+++ b/MyApplication2/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     compile 'io.reactivex:rxjava:1.2.6'
